feat: update player
