# game/handler/player_handler.go
@@ -2,29 +2,28 @@ package handler
 
 import (
 	"go_game/game/core/domain"
-	core "go_game/game/core/services"
+	service "go_game/game/core/services"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 type HttpPlayerHandler struct {
-	service core.PlayerService
+	service service.PlayerService
 }
 
-func NewHttpPlayerHandler(service *core.PlayerServiceImpl) *HttpPlayerHandler {
+func NewHttpPlayerHandler(service *service.PlayerServiceImpl) *HttpPlayerHandler {
 	return &HttpPlayerHandler{service: service}
 }
 
-// GetAllPlayer Handler functions
 // GetAllPlayer godoc
-// @Summary Get all player
-// @Description Get details of all player
+// @Summary GetAllPlayer
+// @Description GetAllPlayer
 // @Tags Player
 // @Accept  application/json
 // @Produce  json
 // @Security ApiKeyAuth
 // @Success 200 {array} domain.Player
-// @Router /player [get]
+// @Router /player/list [get]
 func (h *HttpPlayerHandler) GetAllPlayer(ctx *fiber.Ctx) error {
 	player, err := h.service.GetAllPlayer()
 	if err != nil {
@@ -37,7 +36,7 @@ func (h *HttpPlayerHandler) GetAllPlayer(ctx *fiber.Ctx) error {
 // CreateNewPlayer godoc
 // @Summary CreateNewPlayer
 // @Description CreateNewPlayer
-// @Param login body domain.Player true "Login"
+// @Param player body domain.Player true "NewPlayer"
 // @Tags Player
 // @Accept  application/json
 // @Produce  json
@@ -53,4 +52,45 @@ func (h *HttpPlayerHandler) CreateNewPlayer(ctx *fiber.Ctx) error {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
 	return ctx.Status(fiber.StatusCreated).JSON(fiber.Map{"message": "Create New Player Success"})
+}
+
+// GetPlayerById godoc
+// @Summary GetPlayerById
+// @Description GetPlayerById
+// @Param player_id path string true "Player ID"
+// @Tags Player
+// @Accept  application/json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {array} domain.Player
+// @Router /player [get]
+func (h *HttpPlayerHandler) GetPlayerById(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+	player, err := h.service.GetPlayerById(id)
+	if err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+	return ctx.Status(fiber.StatusOK).JSON(player)
+}
+
+// UpdatePlayer godoc
+// @Summary UpdatePlayer
+// @Description UpdatePlayer
+// @Param player body domain.Player true "UpdatePlayer"
+// @Tags Player
+// @Accept  application/json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {array} domain.Player
+// @Router /player [patch]
+func (h *HttpPlayerHandler) UpdatePlayer(ctx *fiber.Ctx) error {
+	var player domain.Player
+	if err := ctx.BodyParser(&player); err != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid request"})
+	}
+	updatePlayer, err := h.service.UpdatePlayer(player)
+	if err != nil {
+		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+	return ctx.Status(fiber.StatusOK).JSON(updatePlayer)
 }
